# fastdu

./: .gitignore  Cargo.toml  README.md  main.rs  rustfmt.toml  scanner.rs
src/: main.rs
