[package]
name = "fastdu"
version = "0.1.0"
edition = "2024"
description = "Concurrent, cross-platform version of du"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
clap = { version = "4.5.35", features = ["derive"] }

[[bin]]
name = "fastdu"
path = "main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

