[package]
name = "fastdu"
version = "0.1.1"
edition = "2024"
description = "Parallel, cross-platform version of du"
license = "MIT"
repository = "https://github.com/jesseschalken/fastdu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
clap = { version = "4.5.35", features = ["derive"] }
rustc-hash = "2.1.1"
dashmap = "6.1.0"
mimalloc = "0.1.48"

[[bin]]
name = "fastdu"
path = "main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

